# Embodied-Intelligence-Enables-Agentic-Exploration-in-Microscopy

./: .env.example  .gitattributes  .gitignore  1_create_tool.py  2_main.py  Demo.ipynb  Empty_function.py  Hardware-Free-Demo.ipynb  LICENSE  LICENSE.BSD-3-Clause  README.md  app.py  app_mock.py  create_tool.py  demo.ipynb  main.py  package_project.py  pyproject.toml  requirements.txt  system_config_wizard.py  tool_generation.py
PSF/: 100x.tif  40x.tif  60x.tif
VLA/Mircomanipulation_tool/: .gitignore  1_recorde.py  3_model_train.py  4_model_inference.py  environment.yml  requirements.txt
VLA/Mircomanipulation_tool/model/: policy.py  utils.py
VLA/Mircomanipulation_tool/model/detr/: main.py
VLA/Mircomanipulation_tool/scripts/: run_loop_train.sh
VLA/Mircomanipulation_tool/test/: S_compute.py  cameratest.py  cfg_create.py  hdf5_out.py  pkl_average.py  pkl_count.py  pkl_visializiation.py
VLA/Mircomanipulation_tool/utils/: __init__.py  agent.py  camera.py  image_processing.py  olympus.py  task_interfaces.py
adapters/: __init__.py  llm_clients.py  tool_registry.py
agent/: ast_parser.py  check_agent.py  clarifier.py  clarify.py  experiment_checker.py  experiment_designer.py  experiment_executor.py  experiment_planner.py  fiji_subprocess_executor.py  llm_fgen.py  task_agent.py  tool_agent.py  utils.py
api/: __init__.py  config_routes.py  dependencies.py  models.py  state.py  stream_routes.py  task_routes.py
bootstrap/: __init__.py  config.py
config/: agent_config.py  runtime_config.example.json  system_config.py  task_config.py  tool_manifest.json
configs/: organoid.py
core_tool/: cellpose_tool.py  fiji.py  microscope.py  microscope_controller.py  spatial_metadata.py  tool_utils.py
detector_configs/: 2dcell.py  custom_organoid_merged_mixed_rtmdet_tiny_8xb32-100e.py  mitosis_rtmdet.py
docs/VLA/ACT_for_microscopy/: .gitattributes  README.md
docs/VLA/ACT_for_microscopy/2D_move_none/: config.yaml  dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/2D_set_brightness_none/: config.yaml  dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/2D_set_z_funa/: config.yaml  dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/2D_set_z_none/: config.yaml  dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/Cell_move_none/: config.yaml  dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/Cell_set_brightness_none/: dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/Cell_set_z_funa/: config.yaml  dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/Cell_set_z_none/: config.yaml  dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/Push_to target/: config.yaml  dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/Slice_move_none/: dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/Slice_set_brightness_none/: dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/Slice_set_z_fbna/: config.yaml  dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt
docs/VLA/ACT_for_microscopy/Slice_set_z_none/: config.yaml  dataset_stats.pkl  policy_best.ckpt  policy_last.ckpt  readme.txt
docs/VLA/Mircomanipulation_tool/: 1_recorde.py  2_data_processing.py  3_model_train.py  4_model_inference.py  README.md  README_CN.md
docs/VLA/Mircomanipulation_tool/model/: constants.py  policy.py
docs/VLA/Mircomanipulation_tool/test/: pkl_append.py  pkl_data.py  pkl_pocess.py  pkl_resize.py
docs/VLA/Mircomanipulation_tool/utils/: agent.py  olympus.py  robot.py  task_interfaces.py
docs/experiment_records/08_ambiguity_task_comparison/final_clarify/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  4.md  40.md  41.md  42.md  43.md  44.md  45.md  (+12 more)
docs/experiment_records/08_ambiguity_task_comparison/final_cotclarify/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  (+35 more)
docs/vlm_focus_and_brightness/: run_traditional_focus_brightness_benchmark.py  run_vlm_focus_brightness_benchmark.py
docs/vlm_location_comparison/: README.md  requirements.txt
docs/vlm_location_comparison/localization_toolkit/: __init__.py  cli.py  evaluation.py  model_inference.py  pipeline.py  vlm_inference.py
evaluation/: mitosis_infer.py
evaluation/mitosis_testset/: annotations.json
experiments/prompts/: micro_control_prompt_no_brightness.py  micro_control_prompt_no_focus.py
front/: index.html
model/: Download link.txt  README.md
output/: Cell_13_enhanced_rgb.tif  Cell_13_raw_rgb.tif
prompts/: ansis_platform_prompt_full.py  cell_seg_prompt_full.py  fgen.py  micro_control_prompt_full.py  micro_control_prompt_no_focus.py  prompt_check.py  task_manager_full.py  task_manager_full_stateful.py  task_manager_stateful.py
scripts/: download_detector_weights.ps1  download_vla_act_assets.ps1  install_mmcv_with_fallback.ps1  package_vla_act_assets.ps1  run_generated_imagej_code.py  setup_models.py
services/: __init__.py  runtime_manager.py  runtime_state.py  skill_resolver.py  task_orchestrator.py
tool/: base.py  cellpose_tool.py  fiji.py  frap.py  microscope.py  ports.py
uploaded_cfg/: MMConfig_demo2.cfg
user_skills/: CUSTOM_SKILL_GUIDE.md  README.md  clarify_missing_imaging_parameters.md  mitosis-brightfield-tracking.md
user_skills/planning/: mitosis-brightfield-tracking.md
user_skills/planning/mitosis-multichannel-tracking/: SKILL.md
utils/: agent_utils.py  cli_logging.py  interaction_flow.py  memory_manager.py  planning_skills.py  preview_process.py  runtime_core.py  runtime_factory.py  runtime_models.py  runtime_session.py  runtime_text.py  tool_doc_paths.py  tool_generation.py  tool_manifest.py
weights/: 2Dcell.pth
(+2370 files in other folders)
