[project]
name = "embodied-intelligence-enables-agentic-exploration-in-microscopy-main"
version = "0.1.0"
description = "EIMS application and web HMI"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "addict==2.4.0",
    "aicsimageio==4.14.0",
    "aiobotocore==2.5.4",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aioitertools==0.13.0",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "arxiv==2.4.0",
    "asciitree==0.3.3",
    "asttokens==3.0.1",
    "astunparse==1.6.3",
    "async-timeout==4.0.3",
    "attrs==25.4.0",
    "backcall==0.2.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "bfio==2.3.0",
    "bioimageio-core==0.9.5",
    "bioimageio-spec==0.5.6.0",
    "bleach==6.3.0",
    "bokeh==3.8.2",
    "botocore==1.31.17",
    "brotli==1.2.0",
    "build==1.4.0",
    "cellpose==4.0.8",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cjdk==0.4.1",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "contourpy==1.3.2",
    "curl-cffi==0.14.0",
    "cycler==0.12.1",
    "dask==2025.12.0",
    "dask-image==2025.11.0",
    "dask-jobqueue==0.9.0",
    "dataclasses-json==0.6.7",
    "ddgs==9.10.0",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distributed==2025.12.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docopt==0.6.2",
    "durationpy==0.10",
    "elementpath==5.0.4",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fake-useragent==2.2.0",
    "fastapi==0.127.0",
    "fasteners==0.20",
    "fastjsonschema==2.21.2",
    "fastremap==1.17.7",
    "feedparser==6.0.12",
    "filelock==3.20.3",
    "fill-voids==2.1.1",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2023.6.0",
    "genericache==0.5.2",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.1",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "h5py==3.15.1",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==0.36.1",
    "humanfriendly==10.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "imagecodecs==2025.3.30",
    "imageio==2.27.0",
    "imageio-ffmpeg==0.6.0",
    "imagej==0.3.2",
    "imglyb==2.1.0",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "intel-openmp==2021.4.0",
    "ipykernel==7.1.0",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "jgo==1.1.0",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jmespath==1.1.0",
    "joblib==1.5.3",
    "jpype1==1.4.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "jupyterlab-pygments==0.3.0",
    "kiwisolver==1.4.9",
    "kubernetes==35.0.0",
    "labeling==0.1.15",
    "lazy-loader==0.4",
    "locket==1.0.0",
    "loguru==0.7.3",
    "lxml==4.9.4",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mistune==3.2.0",
    "mkl==2021.4.0",
    "ml-dtypes==0.5.4",
    "mmengine==0.10.7",
    "mmh3==5.2.0",
    "mouseinfo==0.1.3",
    "mpmath==1.3.0",
    "mrc==0.3.1",
    "msgpack==1.1.2",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "narwhals==2.14.0",
    "natsort==8.4.0",
    "nbclient==0.10.4",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nd2==0.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.2",
    "numcodecs==0.13.1",
    "numpy==1.26.4",
    "oauthlib==3.3.1",
    "ome-types==0.6.3",
    "ome-zarr==0.9.0",
    "onnxruntime==1.23.2",
    "openai==2.14.0",
    "opencv-python-headless==4.11.0.86",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "orjson==3.11.7",
    "ormsgpack==1.12.2",
    "overrides==7.7.0",
    "packaging==26.0",
    "pandas==2.3.3",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "partd==1.4.2",
    "pickleshare==0.7.5",
    "pillow==12.0.0",
    "pims==0.7",
    "pipreqs==0.5.0",
    "platformdirs==4.5.1",
    "posthog==5.4.0",
    "primp==0.15.0",
    "progressbar2==4.5.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.5",
    "psutil==7.2.0",
    "psygnal==0.15.0",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pyautogui==0.9.54",
    "pybase64==1.4.3",
    "pycocotools==2.0.11",
    "pycparser==3.0",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.6",
    "pydantic-settings==2.12.0",
    "pygetwindow==0.0.9",
    "pygments==2.19.2",
    "pyimagej==1.7.0",
    "pymmcore==11.14.0.75.0",
    "pymmcore-plus==0.16.0",
    "pymsgbox==2.0.1",
    "pynput==1.8.1",
    "pynrrd==1.1.3",
    "pyparsing==3.3.1",
    "pyperclip==1.11.0",
    "pypika==0.51.1",
    "pyproject-hooks==1.2.0",
    "pyqt6==6.10.1",
    "pyqt6-qt6==6.10.1",
    "pyqt6-sip==13.10.3",
    "pyqtgraph==0.14.0",
    "pyreadline3==3.5.4",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "python-utils==3.9.1",
    "pytweening==1.2.0",
    "pytz==2025.2",
    "pywavelets==1.8.0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "qtpy==2.4.3",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "resource-backed-dask-array==0.1.0",
    "rich==14.2.0",
    "roifile==2025.12.12",
    "rpds-py==0.30.0",
    "ruyaml==0.91.0",
    "s3fs==2023.6.0",
    "safetensors==0.7.0",
    "scikit-image==0.20.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "scyjava==1.12.1",
    "segment-anything==1.0",
    "sentence-transformers==2.7.0",
    "sentencepiece==0.2.1",
    "setuptools==82.0.1",
    "sgmllib3k==1.0.0",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "slicerator==1.1.0",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.1",
    "sqlalchemy==2.0.46",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "superqt==0.7.7",
    "sympy==1.14.0",
    "tbb==2021.13.1",
    "tblib==3.2.2",
    "tenacity==9.1.2",
    "tensorstore==0.1.78",
    "termcolor==3.3.0",
    "terminaltables==3.1.10",
    "threadpoolctl==3.6.0",
    "tifffile==2022.4.8",
    "tiktoken==0.12.0",
    "tinycss2==1.4.0",
    "tokenizers==0.15.2",
    "tomli==2.3.0",
    "toolz==1.1.0",
    "torch==2.1.0",
    "torchaudio==2.1.0",
    "torchvision==0.16.0",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers==4.37.0",
    "typer==0.20.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==1.26.20",
    "useq-schema==0.8.2",
    "uuid-utils==0.14.0",
    "uvicorn==0.40.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "wheel==0.46.3",
    "win32-setctime==1.2.0",
    "wrapt==1.17.3",
    "xarray==2025.6.1",
    "xmlschema==4.2.0",
    "xsdata==25.7",
    "xxhash==3.6.0",
    "xyzservices==2025.11.0",
    "yapf==0.43.0",
    "yarg==0.1.9",
    "yarl==1.22.0",
    "zarr==2.15.0",
    "zict==3.0.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]

[tool.uv]
package = false
environments = ["sys_platform == 'win32'"]
dependency-metadata = [
    { name = "torch", version = "2.1.0+cu118", requires-dist = [
        "filelock",
        "typing-extensions",
        "sympy",
        "networkx",
        "jinja2",
        "fsspec",
    ] },
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.pytest.ini_options]
testpaths = ['tests']
python_files = ['test_*.py']


